syntax = "proto3";

package NothingRpcApi;

option csharp_namespace = "NothingServices.ConsoleApp.Dtos";

// Данные для обновления модели
message UpdateNothingModelDto
{
  // Идентификатор модели
  int32 Id = 1;  
  
  // Имя модели
  string Name = 2;
}